--- a/forms/mikrotik/index.html.hbs
+++ b/forms/mikrotik/index.html.hbs
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="/favicon.png">
     <link rel="icon" href="favicon.svg">
     <title>RouterOS</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 
 <body>
     <div class="login">
         <section>
-            <div class="brand"><img src="mikrotik_logo.svg" alt=""></div>
+            <div class="brand"><img src="/mikrotik_logo.svg" alt=""></div>
             <form class="form" id="login" method="POST">
                 <div id="error" class="errorMessage">{{#if dirty}}Authentication failed: invalid username or password.{{/if}}</div>
                 <div>
