--- a/forms/phpmyadmin/index.html.hbs
+++ b/forms/phpmyadmin/index.html.hbs
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>phpMyAdmin</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="./themes/pmahomme/css/theme.css">
-    <link rel="stylesheet" type="text/css" href="./themes/pmahomme/jquery/jquery-ui.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="/themes/pmahomme/css/theme.css">
+    <link rel="stylesheet" type="text/css" href="/themes/pmahomme/jquery/jquery-ui.css">
 </head>
 
 <body id="loginform">
@@ -69,21 +69,21 @@
                 <div class="col-12">
                     <a href="https://www.phpmyadmin.net/" target="_blank"
                         rel="noopener noreferrer" class="logo">
-                        <img src="./themes/pmahomme/img/logo_right.png" id="imLogo" name="imLogo" alt="phpMyAdmin"
-                            border="0">
+                        <img src="/themes/pmahomme/img/logo_right.png" id="imLogo" name="imLogo" alt="phpMyAdmin"
+                             border="0">
                     </a>
                     <h1>Welcome to <bdo dir="ltr" lang="en">phpMyAdmin</bdo></h1>
 
                     <div class="hide" id="js-https-mismatch">
                         <div class="alert alert-danger" role="alert">
-                            <img src="themes/dot.gif" title="" alt="" class="icon ic_s_error"> There is a mismatch
+                            <img src="/themes/dot.gif" title="" alt="" class="icon ic_s_error"> There is a mismatch
                             between HTTPS indicated on the server and client. This can lead to a non working phpMyAdmin
                             or a security risk. Please fix your server configuration to indicate HTTPS properly.
                         </div>
                     </div>
                     {{#if dirty}}
                         <div class="alert alert-danger" role="alert">
-                            <img src="themes/dot.gif" title="" alt="" class="icon ic_s_error">  Cannot log in to the MySQL server
+                            <img src="/themes/dot.gif" title="" alt="" class="icon ic_s_error">  Cannot log in to the MySQL server
                         </div>
                     {{/if}}
                     <div class="hide js-show" style="display: block;">
@@ -107,7 +107,7 @@
 
                         <div class="card mb-4">
                             <div class="card-header">
-                                Log in <a href="#" target="documentation"><img src="themes/dot.gif"
+                                Log in <a href="#" target="documentation"><img src="public/themes/dot.gif"
                                         title="Documentation" alt="Documentation" class="icon ic_b_help"></a>
                             </div>
                             <div class="card-body">
