adjusting project structure for new approach

--- a/forms/standard/index.html.hbs
+++ b/forms/standard/index.html.hbs
@@ -20,7 +20,7 @@
                     <label for="form-name">Nazwa użytkownika</label>
                 </td>
                 <td>
-                    <input type="text" name="name" id="form-name" autocomplete="off"/>
+                    <input type="text" name="username" id="form-name" autocomplete="off"/>
                 </td>
             </tr>
             <tr>
