--- a/forms/phpmyadmin/index.html.hbs
+++ b/forms/phpmyadmin/index.html.hbs
@@ -107,7 +107,7 @@
 
                         <div class="card mb-4">
                             <div class="card-header">
-                                Log in <a href="#" target="documentation"><img src="public/themes/dot.gif"
+                                Log in <a href="#" target="documentation"><img src="/themes/dot.gif"
                                         title="Documentation" alt="Documentation" class="icon ic_b_help"></a>
                             </div>
                             <div class="card-body">
